--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -98,12 +98,20 @@
                                 <rect key="frame" x="20" y="160" width="374" height="682"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LEc-hD-gzU">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="61"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="OfI-A9-7cY">
+                                        <rect key="frame" x="0.0" y="42" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😄"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙁"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F8B-XU-zsF">
-                                        <rect key="frame" x="0.0" y="69" width="374" height="613"/>
+                                        <rect key="frame" x="0.0" y="81" width="374" height="601"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -130,6 +138,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="detailTextView" destination="F8B-XU-zsF" id="H6d-np-6hr"/>
+                        <outlet property="moodSC" destination="OfI-A9-7cY" id="EDe-IL-MbU"/>
                         <outlet property="titleTextField" destination="LEc-hD-gzU" id="vNs-Vh-N5M"/>
                     </connections>
                 </viewController>
@@ -155,6 +164,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tn1-8B-s0f"/>
+        <segue reference="nSj-3G-lhu"/>
     </inferredMetricsTieBreakers>
 </document>
